# mxt_bl

./: .gitignore  README.md
bootloader/apps/i2c_bootloader/bootloader/firmware/src/: main.c
bootloader/apps/i2c_bootloader/bootloader_host_sdcard/firmware/src/: app.c  app.h  app_console.h  app_mxt.c  app_mxt.h  main.c
bootloader/apps/i2c_bootloader/mchp-i2cbsl/: .cproject  .gdbinit  .gitignore  .project  CMakeLists.txt  README  mchp-i2cbsl_gdb_arm-poky-linux-gnueabi.launch  toolchain.cmake
bootloader/apps/i2c_bootloader/mchp-i2cbsl/src/: blconfig.h  crc32.c  i2cbsl.c  i2cbsl.h  main.c  mxtbsl.c
bootloader/apps/i2c_bootloader/mxt_bootloader_app/firmware/src/: main.c  mxt_bl_config.h  mxt_bootloader.c
bootloader/apps/i2c_bootloader/mxt_bootloader_app/src/: main.c  mxt_bl_config.h  mxt_bootloader.c
bootloader/apps/i2c_bootloader/mxt_bootloader_app/tianma_tp_i2c_bootloader_sam_da1_xpro.X/nbproject/: Makefile-genesis.properties  Makefile-impl.mk  Makefile-sam_da1_xpro.mk  Makefile-variables.mk  Package-sam_da1_xpro.bash  configurations.xml  project.xml
bootloader/apps/i2c_bootloader/test_app/firmware/src/: app_info4.c  app_info4.h  main.c
doc/: info4_app_bootloader.md
firmware/: app_1s.sh  mchp-i2cbsl
firmware/linux_host/: app_0.5s.sh  app_int_0.sh  mxt_1067_v00.sh  mxt_1067_vAA.sh  mxt_info.sh
firmware/mXT1067_cfg/: MaxTouchStudioInitLog.txt  mXT1067TDAT_cfg_1.raw  mXT1067TDAT_cfg_1.xcfg  mXT1067TDAT_cfg_default.raw  mXT1067TDAT_cfg_default.xcfg
firmware/mXT1067_fw/: mXT1067TDAT_0x3D_1.0.00_PROD.enc  mXT1067TDAT_0x3D_1.0.AA_PROD.enc
(+183 files in other folders)
